08/05/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added core support for Undo/Redo. Undo/Redo will temporarily be view
      specific. Eventually it will be entirely part of core after the
      new data model is complete.

08/03/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added Russian translation thanks to Segrer.

07/26/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the find and findnext actions to use proper messages
      labels.
    * Fixed a bug where the shortcuts for Built-In commands were not being 
      honored.

07/24/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a bug with the source view for new users that caused a
      NullPointerException to be thrown when opening the source view.
    * Added a wrapper exe for windows users using jSmooth

07/21/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed bug 1509575. Files that are reloaded should always be loaded in a
      view that can accep the reloaded file.

07/20/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Released 0.5pre1
    * Keyboard shortcuts are now fully supported.
    * Added Japanese translation

07/12/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added functionality to save keyboard shortcuts. The shortcuts themselves
      work but the shortcut labels for menu items are not updated when the
      action is updated. This is a bug that is fixed in the beta for Java 6
      but obviously it can't wait that long.
    * Renamed EnhancedMenu to WrappingMenu. I think it's more descriptive.
    * Updated messages to load the messages files in UTF-8

07/10/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the Shortcuts option pane. However, it currently it doesn't work. 
      It only displays the built in options and the combo box.
    * Updated the shortcuts option pane so that it shows the select shortcut
      dialog.

07/06/2006  Ian Lewis   <IanLewis@member.fsf.org>
