@@ -4,7 +4,7 @@ Active Contributors:
 Translators:
     German (de) - Bianca Schoen
     Swedish (sv) - Patrik Johansson <patjoh@itstud.chalmers.se>
+    Russian (ru) - Alexandr Gridnev <alexandr-gridnev@yandex.ru>
 Past Contributers:\n\
     Aaron Flatten  <aflatten@users.sourceforge.net>
     Bilel Remmache <rbilel@users.sourceforge.net>
-    SVM <svmcoranto@users.sourceforge.net>
