@@ -1,3 +1,7 @@
+08/07/2006  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Added temporary support for undo to jsXe.
+
 08/05/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
     * Added core support for Undo/Redo. Undo/Redo will temporarily be view
@@ -6,7 +10,7 @@
 
 08/03/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
-    * Added Russian translation thanks to Segrer.
+    * Added Russian translation thanks to Alexandr Gridnev.
 
 07/26/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
